fix meme letter and spacing issues

--- a/app.css
+++ b/app.css
@@ -5,25 +5,28 @@ body {
   margin: 20px;
 }
 
+button {
+cursor: pointer;
+}
+
 #meme-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  /* padding: 5px; */
+  padding: 5px;
   border-radius: 10px;
   background-color: bisque;
 }
 .meme {
-  margin: 10px;
+  margin: 10px 0px;
   position: relative;
 }
 .meme img {
-  max-width: 100%;
+  max-width: 500px;
   height: auto;
 }
 .meme-text {
   position: absolute;
-  top: 10px;
   left: 50%;
   transform: translateX(-50%);
   color: white;
@@ -31,15 +34,28 @@ body {
   font-size: 20px;
   text-align: center;
 }
+.top-text {
+  top: 10px;
+}
+.bottom-text {
+  bottom: 10px;
+}
+
+.spacer {
+  margin: 0px 10px;
+}
+
 .remove-btn {
+  width: 100px;
+  height: 30px;
   position: static;
-  top: 5px;
-  right: 5px;
-  cursor: pointer;
+  top: 10px;
+  right: 10px;
   background-color: #ff5757;
   color: white;
   border: none;
   padding: 5px;
   font-size: 12px;
   border-radius: 3px;
+  display: block
 }
